--- a/_posts/2024-01-22-存储结构.md
+++ b/_posts/2024-01-22-存储结构.md
@@ -145,7 +145,24 @@ tags: hardware
 
 ### Flash
 
+![flash-1](/assets/images/2024-01-22/flash-1.png)
 
+> The flash memory is a kind of electrically erasable programmable read-only memory (EEPROM), which is classified as a nonvolatile memory. Although the flash memory has roughly the same structure as a common MOSFET device, it has a distinctive feature where the transistor has two gates instead of one. The control gate at the top is the same as other MOS transistors, but below there is a floating gate. Normally, this floating gate is formed of a polysilicon film and becomes a floating gate electrode in an insulator (SiO<sub>2</sub>) that is not connected to anywhere. Because the floating gate is electrically isolated by its insulating layer, electrons placed on it are trapped until they are removed by another application of electric field.
 
+> flash的存储结构如上图，跟CMOS非常像，差异在于多了一个浮动的gate，两个gate以及间隔的绝缘体构成了电容，浮动gate周围都是绝缘体，所以电容充电后电子在无外力作用下不会流失。
 
+> The flash memory can be classified into two types depending on the writing method. They are of NAND type and NOR type. As a feature, the write of the NAND type is a voltage type requiring a high voltage and the NOR type is a current type requiring a large current.
 
+> flash也跟CMOS一样分为两种：NAND和NOR。
+
+![flash-2](/assets/images/2024-01-22/flash-2.png)
+
+> In the case where the floating gate is not charged before writing, it is considered as a depletion type in which the current is flowing even at zero bias. When the floating gate is charged after writing, it becomes an enhancement type in which there is no current at zero bias in the control gate. By charging the floating gate, the voltage is changed when the current flows, making the state ‘0’ and state ‘1’. If there is an electric charge in the floating gate, current begins to flow even when the voltage applied to the control gate is low voltage (about 1 V); however, in the absence of electric charges, no current flows unless a relatively high voltage (about 5 V) is applied.
+
+> When the floating gate is charged, since the electric charge does not have a route to escape, it keeps its state permanently. In order to store electric charges in an unconnected gate, electrons are injected into the floating gate as a tunnel current by applying a high voltage between the drain and the control gate. When erasing, by applying a high voltage to the source, electrons in the floating gate are extracted as a tunneling current.
+
+> 上图以NAND类型的flash为例说明读写和擦除过程。图a处于编程状态，通过控制G和D的电压给gate充电，也即是写数据的过程。图b表示数据保存状态，充进去的电子在无外力作用下不会逃逸，读数据的方式时判断S和D之间电压的大小。图c表示擦除状态，通过控制G和S的电压给gate放电。
+
+> In addition, each bit of a general flash memory can be separately written, but at the time of erasing, it is performed collectively on a block basis.
+
+> flash的bit可以独立的写，但是为了节省成本擦除时以块为单位。
