--- a/_posts/2024-02-03-HDL概述.md
+++ b/_posts/2024-02-03-HDL概述.md
@@ -7,3 +7,234 @@ tags: hardware
 ---
 
 # HDL概述
+
+> The process of finding an efficient set of logic gates to perform a given function is labor intensive and error prone, requiring manual simplification of truth tables or Boolean equations and manual translation of finite state machines (FSMs) into gates. In the 1990’s, designers discovered that they were far more productive if they worked at a higher level of abstraction, specifying just the logical function and allowing a computer-aided design (CAD) tool to produce the optimized gates. The specifications are generally given in a hardware description language (HDL). The two leading hardware description languages are SystemVerilog and VHDL.
+
+> 类比软件编程语言，逻辑门相当于机器码级别，编程效率很低，然后出现了汇编语言以提高效率，硬件编程的汇编语言是硬件描述语言，简称HDL，主流的HDL是`Verilog`、`SystemVerilog`、`VHDL`。
+
+
+> The two major purposes of HDLs are logic simulation and synthesis. During simulation, inputs are applied to a module, and the outputs are checked to verify that the module operates correctly. During synthesis, the textual description of a module is transformed into logic gates.
+
+> HDL的两个主要作用是仿真和综合，仿真是以软件的方式模拟硬件电路的行为然后对硬件行为进行测试，综合是把经过测试的HDL描述的硬件电路转换为逻辑门。
+
+
+## 模块
+
+> A block of hardware with inputs and outputs is called a module. An AND gate, a multiplexer, and a priority circuit are all examples of hardware modules. The two general styles for describing module functionality are behavioral and structural. Behavioral models describe what a module does. Structural models describe how a module is built from simpler pieces; it is an application of hierarchy. A module is a good application of modularity. It has a well-defined interface, consisting of its inputs and outputs, and it performs a specific function. The particular way in which it is coded is unimportant to others that might use the module, as long as it performs its function.
+
+> HDL的核心概念是模块，模块类似c语言中无状态的函数，指定输入和输出，实现指定的功能。函数之间可以互相调用，模块也一样，上层模块可以通过组合下层模块以实现复杂功能。
+
+
+> 分别用SystemVerilog和VHDL实现y = $\overline{\text{a b c}}$ + a $\overline{\text{b c}}$ + a $\overline{\text{b}}$ c
+
+### SystemVerilog
+
+
+```Verilog
+
+module sillyfunction(input logic a, b, c,
+                     output logic y);
+    assign y = ~a & ~b & ~c |
+                a & ~b & ~c |
+                a & ~b & c;
+endmodule
+
+```
+
+> A SystemVerilog module begins with the module name and a listing of the inputs and outputs. The assign statement describes combinational logic. ~ indicates NOT, & indicates AND, and | indicates OR. logic signals such as the inputs and outputs are Boolean variables (0 or 1). They may also have floating and undefined values.
+
+> SystemVerilog的模块以模块名开头，然后指定输入输出参数，语法类似c语言。
+
+### VHDL
+
+```VHDL
+
+library IEEE; 
+use IEEE.STD_LOGIC_1164.all;
+
+entity sillyfunction is
+    port(a, b, c: in STD_LOGIC;
+         y: out STD_LOGIC);
+end;
+
+architecture synth of sillyfunction is
+begin
+    y <= (not a and not b and not c) or
+         (a and not b and not c) or
+         (a and not b and c);
+end;
+
+```
+
+> VHDL code has three parts: the library use clause, the entity declaration, and the architecture body. The entity declaration lists the module name and its inputs and outputs. The architecture body defines what the module does. VHDL signals, such as inputs and outputs, must have a type declaration. Digital signals should be declared to be STD_LOGIC type. STD_LOGIC signals can have a value of '0' or '1' as well as floating and undefined values. The STD_LOGIC type is defined in the IEEE.STD_LOGIC_1164 library, which is why the library must be used. 
+
+> VHDL的模块语法与SystemVerilog有较大差异，分为三部分：library、entity、architecture。
+
+> Both languages are fully capable of describing any hardware system, and both have their quirks. The best language to use is the one that is already being used at your site or the one that your customers demand. Most CAD tools today allow the two languages to be mixed so that different modules can be described in different languages.
+
+> 两种语言都能描述任意的硬件系统，各有优劣。
+
+
+## 示例
+
+> In our experience, the best way to learn an HDL is by example. HDLs have specific ways of describing various classes of logic; these ways are called idioms.
+
+> HDL最好的学习方式是熟悉常用功能的示例。
+
+
+### 组合逻辑
+
+> 条件赋值
+
+```Verilog
+
+module mux2(input logic [3:0] d0, d1,
+            input logic s,
+            output logic [3:0] y);
+    assign y = s ? d1 : d0;
+endmodule
+
+```
+
+```VHDL
+
+library IEEE; 
+use IEEE.STD_LOGIC_1164.all;
+
+entity mux2 is 
+    port(d0, d1: in STD_LOGIC_VECTOR(3 downto 0);
+         s: in STD_LOGIC;
+         y: out STD_LOGIC_VECTOR(3 downto 0));
+end;
+
+architecture synth of mux2 is
+begin
+    y <= d1 when s else d0;
+end;
+
+```
+
+> 中间变量
+
+```Verilog
+
+module fulladder(input logic a, b, cin,
+                 output logic s, cout);
+    // 中间变量
+    logic p, g;
+
+    assign p = a ^ b;
+    assign g = a & b;
+    assign s = p ^ cin;
+    assign cout = g | (p & cin);
+endmodule
+
+```
+
+```VHDL
+
+library IEEE; 
+use IEEE.STD_LOGIC_1164.all;
+
+entity fulladder is 
+    port(a, b, cin: in STD_LOGIC;
+         s, cout: out STD_LOGIC);
+end;
+
+architecture synth of fulladder is
+    -- 中间变量
+    signal p, g: STD_LOGIC;
+begin
+    p <= a xor b;
+    g <= a and b;
+    s <= p xor cin;
+    cout <= g or (p and cin);
+end;
+
+```
+
+### 结构化编程
+
+> 借用mux2以实现mux4
+
+```Verilog
+
+module mux4(input logic [3:0] d0, d1, d2, d3,
+            input logic [1:0] s,
+            output logic [3:0] y);
+    logic [3:0] low, high;
+
+    mux2 lowmux(d0, d1, s[0], low);
+    mux2 highmux(d2, d3, s[0], high);
+    mux2 finalmux(low, high, s[1], y);
+endmodule
+
+```
+
+```VHDL
+
+library IEEE; 
+use IEEE.STD_LOGIC_1164.all;
+
+entity mux4 is
+    port(d0, d1, d2, d3:in STD_LOGIC_VECTOR(3 downto 0);
+         s: in STD_LOGIC_VECTOR(1 downto 0);
+         y: out STD_LOGIC_VECTOR(3 downto 0));
+end;
+
+architecture struct of mux4 is
+
+    // 声明依赖的模块及其签名
+    component mux2 port(d0, d1:in STD_LOGIC_VECTOR(3 downto 0);
+                        s: in STD_LOGIC;
+                        y: out STD_LOGIC_VECTOR(3 downto 0));
+    end component;
+
+    // 声明中间变量
+    signal low, high: STD_LOGIC_VECTOR(3 downto 0);
+begin
+    lowmux: mux2 port map(d0, d1, s(0), low);
+    highmux: mux2 port map(d2, d3, s(0), high);
+    finalmux: mux2 port map(low, high, s(1), y);
+end;
+
+```
+
+### 时序逻辑
+
+> In SystemVerilog always statements and VHDL process statements, signals keep their old value until an event in the sensitivity list takes place that explicitly causes them to change. Hence, such code, with appropriate sensitivity lists, can be used to describe sequential circuits with memory. For example, the flip-flop includes only clk in the sensitive list. It remembers its old value of q until the next rising edge of the clk, even if d changes in the interim.
+
+```Verilog
+
+module flop(input logic clk,
+            input logic [3:0] d,
+            output logic [3:0] q);
+
+    always_ff @(posedge clk)
+        q <= d;
+
+endmodule
+
+```
+
+```VHDL
+
+library IEEE; 
+use IEEE.STD_LOGIC_1164.all;
+
+entity flop is
+    port(clk: in STD_LOGIC;
+         d: in STD_LOGIC_VECTOR(3 downto 0);
+         q: out STD_LOGIC_VECTOR(3 downto 0));
+end;
+
+architecture synth of flop is
+begin
+    process(clk) begin
+        if rising_edge(clk) then
+            q <= d;
+        end if;
+    end process;
+end;
+
+```
