--- a/_posts/2024-02-04-HLS概述.md
+++ b/_posts/2024-02-04-HLS概述.md
@@ -8,3 +8,159 @@ tags: hardware
 
 # HLS概述
 
+> HLS can be defined as: **The process of converting an untimed or partially timed behavioral description into efficient hardware.** You can think of the process of converting ANSI-C, C++ or MATLAB into a synthesizable low-level Hardware Description Language (HDL) like Verilog or VHDL. I include in the definition partially timed behavioral description because many commercial HLS tools allow to time different portions of the behavioral description. This allows HLS user to e.g., model hardware interfaces.
+
+> 高级综合的定义是把无时序或部分时序的行为描述转换为高效的硬件描述。例如把C/C++语言描述的行为转换为低级硬件描述语言Verilog或VHDL。
+
+![hls-overview](/assets/images/2024-02-04/hls-overview.png)
+
+> In particular the inputs to any HLS process are the following:
+
+* **Behavioral Description (𝐶<sub>𝑖𝑛</sub>)** This is the behavioral description to be converted into a hardware circuit through HLS. Different HLS vendors support different input languages. The most common ones are ANSI-C, C++, SystemC (C++ class for hardware design) or MATLAB.
+
+* **Synthesis Directives (𝑝𝑟𝑎𝑔𝑚𝑎<sub>𝐻𝐿𝑆</sub>)** These are comments inserted in the behavioral description that allows the designer to control how to mainly synthesize arrays, loops and functions. These directives are extremely important in order to generate the hardware circuit with the desired constraints.
+
+* **Technology Library (𝑡𝑒𝑐ℎ𝑙𝑖𝑏<sub>𝐻𝐿𝑆</sub>)** HLS requires a technology library that includes the area and delay of basic operators like adders, multipliers, multiplexers, etc. This library is extremely important to get good results. 
+
+* **Target Synthesis Frequency (𝑓<sub>𝐻𝐿𝑆</sub>)** The designer has to specify the target frequency at which the generated hardware needs to run as an input to the HLS process.
+
+> The HLS process reads in all of these inputs and performs three main steps: (1) Resource allocation, (2) scheduling and (3) binding. 
+
+> HLS的输入信息包括：使用C/C++/SystemC描述的行为；综合指令；技术库；目标综合频率。基于输入信息执行3个步骤：资源分配；调度；绑定。
+
+---
+
+> The HLS process finally generates the hardware circuit specified in the selected HDL (Verilog or VHDL). In addition, the HLS process typically also generates additional outputs, In particular:
+
+* **Register Transfer Level Description (RTL)** This is the main output of the HLS process. The hardware circuit described using a HDL. In the figure every point in the trade-off curve represents a unique RTL description with different area vs. performance trade-offs. This is one of the advantages of HLS compared to using low-level HDLs. Changing e.g., the synthesis directives the HLS process will generate a different circuit.
+
+* **Quality of Results (QoR) Report** HLS tools also report the results in terms of estimated area, performance, critical path delay and often power. It should be noted that the values reported after HLS are only approximated values and should be interpreted with caution.
+
+* **Logic Synthesis Scripts** HLS is the first step in a series of additional steps required to build a complete hardware circuit. Thus, most HLS tools generate scripts to interface the HLS tool with the logic synthesis tool. These can be Application Specific Integrated Circuit (ASIC) or Field-Programmable Gate Array (FPGA) logic synthesis tools, as the RTL code needs to be further synthesized into a gate netlist.
+
+* **Testbench** The generated RTL code although correct by construct needs to always be verified. Thus, most HLS tools also generated testbenches as an output.
+
+> HLS的产出物包括：基于Verilog或VHDL的RTL级描述；关于面积、性能、能耗的质量报告；适用于ASIC或FPGA的逻辑综合脚本；测试用例。
+
+
+## 背景
+
+![hls-soc](/assets/images/2024-02-04/hls-soc.png)
+
+> With the advent of Moore’s law, most Integrated Circuits (ICs) are now heterogeneous System-on-Chip (SoCs). These SoCs contain a variety of different embedded processor, embedded memory, different peripherals (e.g., UART, SPI, I2C) and a multiple dedicated hardware accelerators (HWaccs), all interconnected through an on-chip bus.
+
+> 根据摩尔定律，集成电路已经演变为大型的SOC，包含各种嵌入式处理器、嵌入式内存、各种外设和硬件加速器，都通过片上总线相连。
+
+> One of the reasons why HLS is a good choice when designing these accelerators is that the applications to be accelerated in HW are often first developed using a high-level language such as ANSI-C, C++ or MATLAB. Some of these applications include encryption algorithms, Digital Signal Processing (DSP), image processing applications and more recently different types of Artificial Neural Networks (ANNs) to name a few. The main characteristics of any application to be accelerated is that it should have large amounts of parallelism so that the dedicated hardware implementation can be faster and more energy efficient than executing it on the embedded SoC processor. It seems therefore natural to use HLS to directly synthesize any of these applications into a dedicated HW accelerator using HLS instead of having to manually translate the algorithm from the original behavioral description into RTL.
+
+> SOC中的加速器一般都是首先基于C/C++开发的，如果其中包含大量可并行部分，改为硬件实现可大幅提高性能。与使用HDL重新实现加速逻辑相比，直接将C/C++转换为HDL效率更高。
+
+
+## 优势
+
+![hls-vs-verilog](/assets/images/2024-02-04/hls-vs-verilog.png)
+
+> Raising the level of HW design abstraction from the RT-level (Verilog or VHDL) to the behavioral level has multiple advantages: 
+
+* **Faster and Easier Design** Writing C/C++ code is much easier than writing Verilog or VHDL. It requires less lines of code as C/C++ does not require to specify many things that are needed in any HDL. Some include the clock and the reset.
+
+* **Faster Verification** Starting at the untimed behavioral level also allows us to speed up the verification process as different types of simulation models at the different abstraction levels can be leveraged. E.g., the untimed C/C++ description can be compiled using a regular SW compiler like gcc or g++ leading to simulation speeds of 1MHz. HLS also allows to generate fast cycle-accurate simulation model. These are again 10× faster than an RTL simulation and are timing accurate.
+
+* **Ability to generate Functional Equivalent Designs** One additional and unique advantage of HLS is that it allows to generated a variety of functional equivalent hardware implementations from the same behavioral description by simply setting different HLS synthesis options. One of the inputs to the HLS process are the synthesis directives in the form of pragmas. Setting different combinations of these pragmas lead to designs with different area vs. performance and power trade-offs. Using low-level HDLs for HW designs implies that the micro-architecture of the HW is fixed. This implies that the area and performance are fixed. Generating a new architecture with different trade-offs would involve having to fully design and verify the RTL. This is time-consuming and error prone.
+
+> HLS比HDL的抽象级别跟高，因此开发效率和仿真验证效率都更高，HLS的一个更大的优势是通过指定不同的参数可以得到不同“面积/性能/能耗”但是功能相同的电路。
+
+
+## HLS实现
+
+![hls-stages](/assets/images/2024-02-04/hls-stages.png)
+
+> The process of converting an untimed behavioral description into structural synthesizable RTL code has been well studied since the 80’s. The complete process composed of three main stages
+
+* **Stage 1: Front-end:** is the synthesizer front-end. Its main purpose is to check for syntactical errors in the behavioral description and to perform technology independent optimizations. These are common optimization done by most software compilers like constant propagations, dead code elimination, common subexpression elimination, etc. These optimizations are extremely important because the final hardware circuit might be much larger than necessary if the input description is not optimized. For example, if the code includes (a+b) - (a+b)/8 the synthesizer does not require two adders to compute (a+b) twice as this will not change. The output of the font-end is typical in intermediate representation of the optimized behavioral description in the form of a Control Data Flow Graph (CDFG). This CDFG contain the type of operations and their dependencies in graph format.
+
+* **Stage 2: Main Synthesis Steps:** This stage is the core of the HLS process and can be further decomposed into three main steps: (i) Resource allocation , (ii) Scheduling , and (iii) Binding. The **resource allocation** step extracts the resources in the technology library (𝑡𝑒𝑐ℎ𝑙𝑖𝑏<sub>𝐻𝐿𝑆</sub>) that will be required to synthesize the behavioral description and stores it in a functional unit resource constraint file (FCNT). The **scheduling** step then times the behavioral description based on the available resources in the FCNT file, the target synthesis frequency (𝑓<sub>𝐻𝐿𝑆</sub>) and the technology library. Based on the target synthesis frequency and the delay of the individual operators, the same behavioral description will be scheduled into different control/clock steps. This is another advantage of HLS. The same behavioral description is automatically retimed for different target synthesis frequencies and technology libraries, without the need to change the behavioral description. This has the additional benefit that the designer can easily switch between targeting an ASIC and FPGA and quickly evaluate the implementation differences. Finally, the **binding** step determines which operation in the scheduled CDFG is executed onto which of the FUs in the FCNT file. 
+
+* **Stage 3: Back-End:** The back-end stage takes the scheduled and bound CDFG as an input and generates structural RTL code in either Verilog or VHDL as output. The RTL structure generated typical consists of a controller in the form of a Finite State Machine (FSM) and a datapath where the FUs reside. These FUs include, adders, multipliers and dividers of different bit widths.
+
+HLS主要流程分为3个阶段：前端；综合；后端。前端主要是基于编译原理对输入的行为描述进行解析和优化，生成控制数据流图CDFG，HLS编译器一般是基于LLVM/GCC实现。综合又分为3个步骤：资源分配这一步是解析技术库中的可用资源存储到资源约束文件FCNT，调度这一步是基于目标时钟频率、资源约束文件、技术库中组件延迟信息综合考虑划分CDFG中每个节点到相应的clock，绑定这一步决定CDFG中每个操作对应到FCNT中的相应资源。
+
+
+### HLS核心步骤
+
+![hls-main](/assets/images/2024-02-04/hls-main.png)
+
+> This figure shows an example of a simple ANSI-C program to be synthesized. In this case the program does two multiplications and two additions taken the variables A,B,C,D as inputs and generates two outputs, E and F. In addition to the behavioral description we can also see the two other inputs required by the HLS process. The technology library (𝑡𝑒𝑐ℎ𝑙𝑖𝑏<sub>𝐻𝐿𝑆</sub>) and the target synthesis frequency, 𝑓<sub>𝐻𝐿𝑆</sub>.
+
+上图是一个示例：C程序描述了一个简单电路，4个输入2个输出。
+
+> The behavioral description is first parsed by the front-end and the CDFG generated. The next step in most HLS processes is the resource allocation step. This is because most HLS tools perform what is called a resource constrained HLS. In other words, the user specifies how many resources (e.g., functional units) it allows the synthesizer tries to generate the fastest possible circuit given those constraints. Another approach could be to do the exact opposite. Specify the desired performance, e.g., in latency (clock steps required to generate a new output) and the synthesizer would use as many hardware resources as needed to achieve this. The main steps involved in the HLS process are described as follows:
+
+* **Resource allocation:** The HLS process parses the CDFG and extracts from the technology library (𝑡𝑒𝑐ℎ𝑙𝑖𝑏<sub>𝐻𝐿𝑆</sub>) the number and type of operators (FUs) that it needs to execute the operations in the CDFG. The output is thus, a FU constraint file (FCNT) that contains the number and type of FUs. In this particular example the FCNT file includes two 32-bit signed adders and two 32-bit signed multipliers. The main reason for requiring 32-bit FUs is that the variables are declared as integer types (int A,B,C,D). This severely impacts the quality (area and performance) of the generated hardware and thus, it is extremely important to specify the smallest acceptable bit width. It is not the same to have 32-bit adders and multipliers are much larger and have larger delays than 8-bit or 16-bit adders and multipliers. One problem that we can already see is that ANSI-C or C++ only allow to use standard data types, like char, short int, or int, but to fully optimize the hardware circuit, we often need to specify arbitrary bit widths, e.g., 12-bits or 18-bits. To address this, all commercial HLS vendors provide their own custom data types or use SystemC which has been standardize by the IEEE and has its own data
+types. 
+
+资源分配这一步是用于从技术库中解析出基本操作的类型和数量，然后生成资源约束文件FCNT，上图中的FCNT包括2个32-bit的加法和2个32-bit的乘法，之所以是32-bit是由于原生的C/C++的数据类型无法精确指定bit宽度。
+
+* **Scheduling:** This second step parallelizes the CDFG assigning individual parts of it to individual clock steps based on the given constraints. These constraints are the FCNT file generated at the resource allocation stage and the target synthesis frequency, 𝑓<sub>𝐻𝐿𝑆</sub>. Scheduling is one of the most important parts of the HLS process and much work has been done in the past to find an optimal schedule, although scheduling has been shown to be in general intractable. Because of this, many heuristics that trade-off the quality of the results vs. the time complexity of the scheduler have been presented in the past. Scheduling basically answers the question of how to assign the computations of a program into the hardware time steps.
+
+调度要做的是根据FCNT把CDFG中每个操作划分到相应的时钟周期以满足𝑓<sub>𝐻𝐿𝑆</sub>的要求。启发式调度算法要平衡结果质量和算法耗时。
+
+> These scheduling algorithms can be broadly classified into timing-constrained and resource-constrained scheduling. A popular timing-constraint scheduling heuristic algorithm is force-directed scheduling which is based on a constructive heuristic that iteratively tries to minimize the force of the scheduled operations to balance the computations on the given clock steps in order to minimize the number of hardware resources used. Most modern HLS synthesizers perform resource-constraint scheduling, where the number of FU are first constraints and the goal is to find the fastest possible circuit. One of the most popular heuristic is list scheduling, where operations are sorted in a list according to a given priority function and then scheduled in the sorted order in the next available clock step. More recently a more elegant way to formulate the scheduling program as a Integer Linear Program (ILP) through a sum of difference constraint (SDC). This can then be passed to an ILP solver which can return the optimal solution.
+
+调度算法分为时间受限和资源受限两类，时间受限算法是用于计算在满足时间约束时使用最少资源的电路，资源受限算法是用于计算使用有限的资源产生最快的电路。工业上常用的是资源调度算法，常用的调度算法有3种: ASAP, ALAP和 SDC。
+
+**As Soon As Possible (ASAP) Scheduling:** One of the easiest way to schedule the CDFG is using an ASAP technique. This technique basically schedules every operation as soon as it is possible. One of the advantages of the ASAP algorithm is that it leads to the optimal solution if the scheduler is allowed to use an infinite number of resources (basically no resource constraint). ASAP scheduling maps operations to their earliest possible start time without violating the precedence constraint. Here is a list of the main characteristics of ASAP scheduling:
+
+1. East and fast to compute. Scheduling can be extremely complex and time consuming. ASAP is very fast.
+2. ASAP scheduling does not attempt to optimize the number of resources used.
+3. Gives the shortest (fastest) possible schedule if unlimited amount of resources is available. 
+4. Gives an upper bound of the execution time.
+
+![hls-sched-asap](/assets/images/2024-02-04/hls-sched-asap.png)
+
+示例如上图，由于FCNT限定了有2个加法1个乘法，所以也限定了一个周期内最大可使用的资源，然后再根据技术库里每个基本操作的延迟参数和时钟频率的要求分割CDFG中的每个操作。
+
+**As Late As Possible (ALAP) Scheduling:** In ALAP scheduling the operations are mapped to their latest possible start time not violating the precedence constraints. Here is a list of the main characteristics of ALAP scheduling:
+
+1. Easy and fast to compute
+2. Finds the longest path in a directed acyclic graph
+3. Does not attempt to optimize the resource cost similar to ASAP
+
+![hls-sched-alap](/assets/images/2024-02-04/hls-sched-alap.png)
+
+上图是ALAP的示例，与ASAP相比第二个加法向下移动到即将使用之前。ASAP可以称作是勤快模式，利用有限的资源能干多少干多少，尽快干完；ALAP可以称作是依赖模式，利用有限的资源尽可能的先干被依赖且无依赖的操作。
+
+**Sum of Difference Constraint (SDC) Scheduling:** In SDC scheduling the scheduling problem is formulated as a mathematical optimization problem that is then solved through a solver. More specifically as in integer linear problem (ILP). This makes it possible to solve the schedule formulation in polynomial time (fast). The formulation is basically a linear objective function with linear constraints (e.g.,==,<=, >=). In SDC scheduling every operation in the DFG is assigned a variable. The dependencies between the different operations (variables) are then formulated as equations, hence the name difference constraints. Here is a list of the main characteristics of the SDC scheduling technique:
+
+1. Optimizes the latency often leading to the optimal results and better results than previous methods.
+2. Fast solution as can be solved in polynomial time.
+
+![hls-sched-sdc](/assets/images/2024-02-04/hls-sched-sdc.png)
+
+上图是SDC算法的示例，SDC算法把问题转换为数学问题，类似于线性回归，用数学的方式求最优解。上图示例分成6个步骤。
+
+1. **Assign variable to every operator:** Assign each operation in the DFG a variable name. In this example the first adder is 𝑋𝑎𝑑𝑑1, the second adder 𝑋𝑎𝑑𝑑2, and the multipliers are 𝑋𝑚𝑢𝑙1 and 𝑋𝑚𝑢𝑙2.
+
+2. **Dependencies constraints:** Model the dependencies in the DFG mathematically as difference constraints equations.
+
+3. **Handling clock constraints:** Update the difference constraint equations based on 𝑓𝐻𝐿𝑆 and the delay of the different operations
+
+4. **Handling Resource constraints:** Create a topological sorted list of the resource constrained operations. Model the constraint as another difference constraint equation and add it to the previous equations.
+
+5. **Formulated cost function:** Formulate the overall cost function that needs to minimize the sum of the variables in the system, subject to all the constraints generated.
+
+6. **Run Solver:** Call the solver used to obtain the schedule of each operation clock step in which is operation is scheduled will be reported if a valid schedule is possible.
+
+
+* **Binding:** This last step assigns the different operations in the scheduled CDFG to the different FUs in the FCNT file. In this case because we have two adders and two multipliers, the binding stage has to decide which adder and multiplier will execute which operation. Although this might seem trivial, the binder needs to make sure that the operations across the entire scheduled circuit are balanced as these FUs will be shared across multiple operations which requires multiplexers.
+
+最后一步绑定是最终的CDFG的每个节点绑定到FCNT中的资源上。
+
+
+### Back-end: RTL Generation
+
+![hls-rtl](/assets/images/2024-02-04/hls-rtl.png)
+
+> The typical circuit has a FSM and a data path. The data path contains the FUs generated in the resource allocation stage. Because these FUs are shared for different operations in the code, muxes are inserted before and after. An FSM is also generated to generate the control signals for these muxes in order to steer the data across the data path accordingly.
+
+典型的电路包含FSM和数据路径，在操作出现共享时插入mux，根据FSM来控制mux。
